# notarization

./: .gitignore  .license_template  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOC-SKILL-EXAMPLES.md  MOVE-DOC-STYLEGUIDE.md  README.md  dprint.json
.cargo/: audit.toml  config.toml
.claude/skills/init-api-mapping/: SKILL.md
.claude/skills/naming-conventions/: SKILL.md
.claude/skills/sync-audit-trail-docs/: SKILL.md
.claude/skills/sync-product-docs/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test-move.yml  build-and-test-rust.yml  build-and-test.yml  clippy.yml  format.yml  move-formatter.yml  rust-docs.yml  shared-build-wasm.yml  upload-docs.yml  wasm-publish.yml  wasm-retag-npm.yml
audit-trail-move/: CLAUDE.md  Move.history.json  Move.toml  README.md  api_mapping.toml
audit-trail-move/scripts/: publish_package.sh  upgrade_package.sh
audit-trail-move/sources/: actions.move  audit_trail.move  capability.move  locking.move  marker.move  permission.move  record.move  record_correction.move  record_tags.move  role_map.move
audit-trail-move/tests/: capability_tests.move  create_audit_trail_tests.move  create_tests.move  locking_tests.move  metadata_tests.move  permission_tests.move  record_tests.move  role_tests.move  test_utils.move
audit-trail-rs/: Cargo.toml  README.md  build.rs
audit-trail-rs/src/: error.rs  iota_interaction_adapter.rs  lib.rs  package.rs
audit-trail-rs/src/core/: mod.rs  (+5 more)
audit-trails-move/sources/: audit_trails.move  capabilities.move  locking.move  permissions.move  record.move
audit_trails/: Move.toml
audit_trails/sources/: audit_trails.move  capabilities.move  permissions.move
bindings/wasm/: DOC-STYLEGUIDE.md  README.md  typedoc.json
bindings/wasm/audit_trails_wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
bindings/wasm/audit_trails_wasm/docs/wasm/: api_ref.md
bindings/wasm/audit_trails_wasm/docs/wasm/audit_trails_wasm/: api_ref.md
bindings/wasm/audit_trails_wasm/docs/wasm/audit_trails_wasm/classes/: DefaultHttpClient.md
bindings/wasm/audit_trails_wasm/examples/: README.md
bindings/wasm/audit_trails_wasm/examples/src/: 02_fetch_trail.ts  03_add_and_list_records.ts  04_delete_records_batch.ts  main.ts  util.ts
bindings/wasm/audit_trails_wasm/lib/: index.ts  tsconfig.json  tsconfig.web.json
bindings/wasm/audit_trails_wasm/src/: builder.rs  client.rs  client_read_only.rs  lib.rs  trail.rs  trail_handle.rs  trail_records.rs  types.rs
bindings/wasm/audit_trails_wasm/src/trail_handle/: access.rs  locking.rs  mod.rs  records.rs  tags.rs
examples/: 01_create_locked_notarization.rs  02_create_dynamic_notarization.rs  03_update_dynamic_notarization.rs  03_update_locked_notarization.rs  04_destroy_notarization.rs  05_update_state.rs  06_update_metadata.rs  07_transfer_dynamic_notarization.rs  08_access_read_only_methods.rs  Cargo.toml  README.md  run.sh
examples/audit-trail/: 01_create_audit_trail.rs  02_add_and_read_records.rs  03_update_metadata.rs  04_configure_locking.rs  05_manage_access.rs  06_delete_records.rs  07_access_read_only_methods.rs  08_delete_audit_trail.rs  README.md  run.sh
examples/audit-trail/advanced/: 09_tagged_records.rs  10_capability_constraints.rs  11_manage_record_tags.rs  12_correct_records.rs
examples/audit-trail/real-world/: 01_customs_clearance.rs  02_clinical_trial.rs  03_digital_product_passport.rs
examples/notarization/: 01_create_locked_notarization.rs  02_create_dynamic_notarization.rs  03_update_dynamic_notarization.rs  07_transfer_dynamic_notarization.rs  08_access_read_only_methods.rs  README.md  run.sh
examples/notarization/real-world/: 01_iot_weather_station.rs  02_legal_contract.rs
examples/real-world/: 01_iot_weather_station.rs  iot_weather_station.rs
examples/utils/: utils.rs
experimental_notarization/: Cargo.toml
experimental_notarization/scripts/: notarize.sh
experimental_notarization/src/: error.rs  lib.rs  notarization.rs
notarization/: Cargo.toml  README.md
notarization-move/: CLAUDE.md  Move.history.json  Move.package-history.toml  Move.toml  README.md  api_mapping.toml
notarization-move/scripts/: notarize.sh  publish_package.sh
notarization-move/sources/: dynamic_notarization.move  locked_notarization.move  method.move  notarization.move  timelock.move
notarization-move/tests/: dynamic_notarization_tests.move  locked_notarization_tests.move  notarization_tests.move
notarization-rs/: Cargo.toml  README.md  build.rs
notarization-rs/src/: client_tools.rs  error.rs  iota_interaction_adapter.rs  lib.rs  notarization.rs  package.rs  well_known_networks.rs
notarization-rs/src/client/: full_client.rs  mod.rs  read_only.rs
notarization-rs/src/core/: builder.rs  destroy.rs  event.rs  metadata.rs  mod.rs  move_utils.rs  notarization.rs  operations.rs  state.rs  timelock.rs  transfer.rs  utils.rs
notarization-rs/src/core/notarization/: mod.rs
notarization-rs/src/core/transactions/: create.rs  destroy.rs  mod.rs  transfer.rs  update_metadata.rs  update_state.rs
notarization-rs/src/core/types/: event.rs  metadata.rs  mod.rs  notarization.rs  state.rs  timelock.rs
notarization-rs/tests/e2e/: client.rs  common.rs  dynamic_notarization.rs  locked_notarization.rs  main.rs
notarization/scripts/: notarize.sh
notarization/src/: client_tools.rs  error.rs  iota_interaction_adapter.rs  lib.rs  notarization.rs  well_known_networks.rs
notarization/src/core/: state.rs  timelock.rs  utils.rs
notarization/src/core/notarization/: mod.rs
poi-rs/: Cargo.toml  README.md
poi-rs/src/: builder.rs  cache.rs  committee.rs  error.rs  lib.rs  proof.rs  source.rs  target.rs
poi-rs/src/cache/: in_memory.rs
poi-rs/tests/: cache.rs  committee.rs  construction_contract.rs  golden.rs  proof.rs  proof_builder.rs  proof_contract.rs  proof_of_inclusion.rs  verifier.rs  verifier_contract.rs
poi-rs/tests/fixtures/v1/: committee.json  event.json  object.json  transaction.json
poi-rs/tests/utils/: mod.rs  proofs.rs
scripts/: notarize.sh
(+182 files in other folders)
