[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2024"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/notarization"
rust-version = "1.85"

[workspace]
resolver = "2"
members = ["audit-trail-rs", "examples", "notarization-rs", "poi-rs"]
exclude = ["bindings/wasm/notarization_wasm", "bindings/wasm/audit_trail_wasm"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcs = "0.1"
chrono = { version = "0.4", default-features = false }
hyper = "1"
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.25.0" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "35a27488b887e28e844a1e46d7edb78605871155", default-features = false }
iota-types = { git = "https://github.com/iotaledger/iota.git", package = "iota-types", tag = "v1.25.0" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.21", default-features = false, package = "iota_interaction" }
iota_interaction_rust = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.21", default-features = false, package = "iota_interaction_rust" }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.21", default-features = false, package = "iota_interaction_ts" }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.21", default-features = false, package = "product_common" }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde-aux = { version = "4.7.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
strum = { version = "0.27", default-features = false, features = ["std", "derive"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.52.2", default-features = false, features = ["macros", "sync", "rt", "process"] }

[profile.release.package.iota_interaction_ts]
opt-level = 's'
