[package]
name = "examples"
version = "0.1.18-alpha"
authors = ["IOTA Stiftung"]
edition = "2024"
publish = false

[lib]
path = "utils/utils.rs"

[[example]]
name = "01_create_locked_notarization"
path = "notarization/01_create_locked_notarization.rs"

[[example]]
name = "02_create_dynamic_notarization"
path = "notarization/02_create_dynamic_notarization.rs"

[[example]]
name = "03_update_dynamic_notarization"
path = "notarization/03_update_dynamic_notarization.rs"

[[example]]
name = "04_destroy_notarization"
path = "notarization/04_destroy_notarization.rs"

[[example]]
name = "05_update_state"
path = "notarization/05_update_state.rs"

[[example]]
name = "06_update_metadata"
path = "notarization/06_update_metadata.rs"

[[example]]
name = "07_transfer_dynamic_notarization"
path = "notarization/07_transfer_dynamic_notarization.rs"

[[example]]
name = "08_access_read_only_methods"
path = "notarization/08_access_read_only_methods.rs"

[[example]]
name = "01_iot_weather_station"
path = "notarization/real-world/01_iot_weather_station.rs"

[[example]]
name = "02_legal_contract"
path = "notarization/real-world/02_legal_contract.rs"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true }
iota-sdk = { workspace = true }
iota_interaction = { workspace = true }
notarization = { path = "../notarization-rs" }
product_common = { workspace = true, features = ["core-client", "test-utils", "transaction"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
