[package]
name = "experimental_notarization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "utxo", "notarization"]
license.workspace = true
# readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "A temporary experimental crate to test data notarization solutions for the IOTA Ledger."

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
identity_iota_interaction.workspace = true
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.2.0" }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f2c63266a065996d53f98156f0412782b468597", package = "fastcrypto" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.10.3-rc" }
tokio = { version = "1.43", default-features = false, features = ["macros", "sync", "rt", "process"] }

[dependencies.identity_iota_core]
git = "https://github.com/iotaledger/identity.rs.git"
branch = "feat/identity-rebased-alpha-public-interaction-rust"
package = "identity_iota_core"
default-features = false
features = ["iota-client", "revocation-bitmap"]