[package]
name = "notarization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "utxo", "notarization"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "A data notarization toolkit for the IOTA Ledger."

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
fastcrypto.workspace = true
phf.workspace = true
product_common = { workspace = true, default-features = false, features = [
    "transaction",
] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false }
serde-value = "0.7.0"
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
thiserror.workspace = true
strum.workspace = true
async-trait.workspace = true
bcs.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "iota_interaction", default-features = false }
iota_interaction_rust = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "iota_interaction_rust", default-features = false }
iota-config = { git = "https://github.com/iotaledger/iota.git", package = "iota-config", tag = "v0.12.0-rc" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.12.0-rc" }
move-core-types = { git = "https://github.com/iotaledger/iota.git", package = "move-core-types", tag = "v0.12.0-rc" }
shared-crypto = { git = "https://github.com/iotaledger/iota.git", package = "shared-crypto", tag = "v0.12.0-rc" }
tokio = { version = "1.43", default-features = false, features = [
    "macros",
    "sync",
    "rt",
    "process",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "iota_interaction", default-features = false }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "iota_interaction_ts" }
tokio = { version = "1.43", default-features = false, features = ["sync"] }
wasm-bindgen = { version = "0.2.100", default-features = false}

[dev-dependencies]
async-trait.workspace = true
identity_jose = { git = "https://github.com/iotaledger/identity.rs.git", branch = "feat/identity-rebased-alpha-public-interaction-rust", package = "identity_jose" }
identity_storage = { git = "https://github.com/iotaledger/identity.rs.git", branch = "feat/identity-rebased-alpha-public-interaction-rust", package = "identity_storage", features = [
    "send-sync-storage",
    "storage-signer",
] }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "iota_interaction" }
lazy_static = "1.5.0"
product_common = { workspace = true, default-features = false, features = [
    "transaction",
    "test-utils",
] }

[features]
default = ["send-sync"]
send-sync = [
    "send-sync-storage",
    "product_common/send-sync",
    "iota_interaction/send-sync-transaction",
]
# Enables `Send` + `Sync` bounds for the storage traits.
send-sync-storage = ["secret-storage/send-sync-storage"]
