[package]
name = "notarization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "utxo", "notarization"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "A data notarization toolkit for the IOTA Ledger."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
product_common = { workspace = true, default-features = false, features = ["transaction"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iota_interaction = { workspace = true, default-features = false }
iota_interaction_rust = { workspace = true, default-features = false }
iota-sdk = { workspace = true }
secret-storage = { workspace = true, default-features = false }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iota_interaction = { workspace = true, default-features = false }
iota_interaction_ts = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
iota_interaction = { workspace = true }
product_common = { workspace = true, features = ["transaction", "test-utils"] }

[features]
default = ["send-sync"]
send-sync = [
  "send-sync-storage",
  "product_common/send-sync",
  "iota_interaction/send-sync-transaction",
]
# Enables `Send` + `Sync` bounds for the storage traits.
send-sync-storage = ["secret-storage/send-sync-storage"]
