[package]
name = "notarization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "utxo", "notarization"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "A data notarization toolkit for the IOTA Ledger."

[dependencies]
cfg-if.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f2c63266a065996d53f98156f0412782b468597", package = "fastcrypto" }
identity_iota_interaction = { git = "https://github.com/iotaledger/identity.rs.git", branch = "feat/identity-rebased-alpha", package = "identity_iota_interaction" }
iota-config = { git = "https://github.com/iotaledger/iota.git", package = "iota-config", tag = "v0.8.1-rc" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.8.1-rc" }
move-core-types = { git = "https://github.com/iotaledger/iota.git", package = "move-core-types", tag = "v0.8.1-rc" }
shared-crypto = { git = "https://github.com/iotaledger/iota.git", package = "shared-crypto", tag = "v0.8.1-rc" }
tokio = { version = "1.29.0", default-features = false, features = ["macros", "sync", "rt", "process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
identity_iota_interaction = { git = "https://github.com/iotaledger/identity.rs.git", branch = "feat/identity-rebased-alpha", package = "identity_iota_interaction", default-features = false }
iota_interaction_ts = { git = "https://github.com/iotaledger/identity.rs.git", branch = "feat/identity-rebased-alpha", package = "iota_interaction_ts" }

[target.'cfg(target_arch = "wasm32")'.dependencies.identity_iota_core]
git = "https://github.com/iotaledger/identity.rs.git"
branch = "feat/identity-rebased-alpha"
package = "identity_iota_core"
default-features = false
features = ["iota-client", "revocation-bitmap"]
