[package]
name = "poi-rs"
version = "0.1.0-alpha"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "proof", "inclusion", "notarization"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proof of Inclusion support for the IOTA Notarization Toolkit."

[dependencies]
async-trait.workspace = true
iota-grpc-client.workspace = true
iota-grpc-types.workspace = true
iota-sdk-types.workspace = true
iota-types.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
iota-config = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
test-cluster = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1", package = "test-cluster" }
