[package]
name = "poi-rs"
version = "0.1.0-alpha"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "proof", "inclusion", "notarization"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proof of Inclusion support for the IOTA Notarization Toolkit."

[features]
cli = ["dep:anyhow", "dep:clap", "dep:iota-config", "dep:reqwest", "serde_json/std"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
clap = { workspace = true, optional = true }
iota-grpc-client.workspace = true
iota-grpc-types.workspace = true
iota-config = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1", optional = true }
iota-sdk-types.workspace = true
iota-types.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
iota-config = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1" }
test-cluster = { git = "https://github.com/iotaledger/iota.git", tag = "v1.26.1", package = "test-cluster" }

[[bin]]
name = "poi"
path = "src/bin/poi.rs"
required-features = ["cli"]
